2023-02-18  Araki Ken  <arakiken@users.sf.net>

	* vterm.c: VTERM_CHECK_VERSION2 macro is added.

2023-02-13  Araki Ken  <arakiken@users.sf.net>

	* vterm.c:
	  - vterm_output_set_callback() is added.
	  - Garbage in resizing window is fixed.

2023-02-11  Araki Ken  <arakiken@users.sf.net>

	* vt_pty_mosh.cpp: wstring -> std:wstring, min -> std:min

	* configure.in, libptymosh/Makefile.in, terminaldisplayinit.cc:
	  mosh-1.4.0 is supported.

2023-01-29  Araki Ken  <arakiken@users.sf.net>

	* xlib/ui_font.c: int parse_xfont_name() -> void parse_xfont_name()

	* README.android, README.mosh: Updated.

	* prepare-gradle.sh: Help message to build with mosh is added.

	* ef_ucs_property.table: Updated to Unicode 15.0.0 (UnicodeData.txt and
	  EastAsianWidth.txt)

2023-01-28  Araki Ken  <arakiken@users.sf.net>

	* README.android: Updated.

	* android/jni/ui.h: Compiling error of XStringToKeysym() is fixed.

	* README.mosh, README.wayland: Updated.

	* uitoolkit/wayland/rescanproto.sh: Added.

2023-01-22  Araki Ken  <arakiken@users.sf.net>

	* tool/mlconfig/Makefile.in: If po/Makefile doesn't exist, make is not
	  executed in po/.

	* configure.in: If $MSGFMT is "no", tool/mlconfig/po/Makefile is not output.

2023-01-21  Araki Ken  <arakiken@users.sf.net>

	* encodefilter/src/dexport-sun.map: Added.

2023-01-14  Araki Ken  <arakiken@users.sf.net>

	* ui_screen.c: bidi_mode=switch is available.

2023-01-14  Araki Ken  <arakiken@users.sf.net>

	* ui_screen.c, vt_term.c:
	  use_dynamic_comb option is disabled if use_ot_layout option is
	  enabled or UCS4 -> ISCII conversion occurs.

	* configure.in: If libm.so is found, for loop exits immediately.

2022-12-24  Araki Ken  <arakiken@users.sf.net>

	* encodefilter/configure.in, baselib/configure.in:
	  3 configure.in files are itegrated to one file.

2022-11-19  Araki Ken  <arakiken@users.sf.net>

	* bl_map.h, pixmap_engine.c, */ui.h, ui_im.[ch], ui_sb_view.h,
	  ui_screen.c: Fix incompatible function pointer types which